Re-apply header alignment bugfix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,11 +85,11 @@ header {
 
 h1 {
     position: relative;
-    text-align: left;
-    font-size: 300%;
+    text-align: center;
+    font-size: 250%;
     color: var(--accent-color);
-    padding-top: 20%;
-    margin: 0 20px;
+    padding-top: 50px;
+    margin: 0 10px;
 }
 
 /* Navbar */
@@ -490,6 +490,11 @@ footer p {
 @media screen and (min-width: 480px) {
     .section-subheading {
         font-size: 200%;
+    }
+
+    /* General Styling */
+    h1 {
+        font-size: 300%;
     }
 
     /* Features */
